Fixing logo jump on page load

--- a/components/homebox/_homebox.scss
+++ b/components/homebox/_homebox.scss
@@ -31,9 +31,9 @@ $font-size: .75rem;
 
 .homebox__logo,
 %homebox__logo {
-  width: 15.9rem;
   display: block;
   margin: 0 auto;
+  height: 3.5rem;
 }
 
 
